# Cartagrapher

./: CHANGELOG.md  Cartagrapher.cabal  README.md  stack.yaml
app/: Main.hs
src/: Cartagrapher.hs  Samson.hs
src/Data/: BitsN.hs
src/Test/Instances/: Finite.hs
test/: Spec.hs
test/Data/: BitsNSpec.hs
test/Test/Instances/: Finite.hs
