cabal-version:       2.4
name:                Cartagrapher
version:             0.0.0.0
synopsis:            cartisian genetic programing
description:         cartisian genetic programing
homepage:            https://github.com/Nolrai/Cartagrapher
bug-reports:         https://github.com/Nolrai/Cartagrapher/issues
license:             MIT
license-file:        LICENSE
author:              Chris Upshaw (From Yukari)
maintainer:          Chris Upshaw (From Yukari) <chrisaupshaw@gmail.com>
copyright:           2021 Chris Upshaw (From Yukari)
category:            Development
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.3

source-repository head
  type:                git
  location:            https://github.com/Nolrai/Cartagrapher.git

common common-options
  build-depends:       base ^>= 4.14.0.0
                     , relude
                     , smallcheck
                     , vector
                     , vector-sized
                     , primitive
                     , mtl
                     , finite-typelits
                     , bytestring-trie
                     , bytestring
  
  mixins:              base hiding (Prelude)
  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Cartagrapher

test-suite Cartagrapher-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       Cartagrapher
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

benchmark Cartagrapher-benchmark
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:       gauge
                     , Cartagrapher
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
